[package]
name = "packet_util"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Evan Schwartzentruber <evandotschwartzentruber@gmail.com>"]
description = "Trait implementation for packet_enum"
exclude = [".github/", ".gitignore", "LICENSE", "README.md", "tests/"]

[dependencies]
bitflags = "2.6.0"
serde = "1.0.213"
